--- a/clusters/staging/tenants.yaml
+++ b/clusters/staging/tenants.yaml
@@ -11,5 +11,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./tenants/staging
+  path: ./tenants/stagingmorethings
   prune: true
