--- a/infrastructure/kyverno-policies/verify-flux-images.yaml
+++ b/infrastructure/kyverno-policies/verify-flux-images.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: verify-flux-images
 spec:
-  validationFailureAction: Audit
+  validationFailureAction: audit
   background: false
   webhookTimeoutSeconds: 30
   failurePolicy: Fail
